--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,10 @@
   ],
   "dependencies": {
     "jquery": "~2.1.1",
+    "jquery-cookie": "1.4.1",
     "bootstrap": "~3.2.0",
+    "jsSHA": "1.5.0",
+    "firebase": "1.0.19",
     "fontawesome": "~4.1.0"
   }
 }
