--- a/bower.json
+++ b/bower.json
@@ -21,6 +21,7 @@
     "bootstrap": "~3.2.0",
     "jsSHA": "1.5.0",
     "firebase": "1.0.19",
+    "ace": "1.1.5",
     "fontawesome": "~4.1.0"
   }
 }
