bower firepad 入れた

--- a/bower.json
+++ b/bower.json
@@ -23,6 +23,7 @@
     "firebase": "1.0.19",
     "ace": "1.1.5",
     "fontawesome": "~4.1.0",
-    "ace-builds": "~1.1.5"
+    "ace-builds": "~1.1.5",
+    "firepad": "~0.1.4"
   }
 }
